  have been added.
* [nt]roff: The "\n[.ev]" number register has been added as a method to
  determine the name of the current environment.
* [nt]roff: In extension level 1, long string "\*[xxx]", register "\n[xxx]",
  and font "\f[xxx]" names are no longer recognized unless they are on a
  line beginning with the ".do" request.
* [nt]roff: The "\)" escape sequence (like "\&" but transparent for
  sentence ending) has been added.
* troff: The "\/" and "\," escape sequences have been added in very basic
  implementations for groff compatibility only; it is recommended that the
  ".kernpair" request is used instead.
* [nt]roff: Static limits on word and line size have been eliminated.
* [nt]roff: The ".tm" and ".write" commands now discard formatted motion
  sequences.
* troff: The ".psbb" request now reads a "%%HiResBoundingBox" DSC comment
  in preference to "%%BoundingBox"; the registers it assigns to are now
  floating-point registers.
* troff: The ".psbb" request now properly supports the "(atend)" syntax in
  PostScript DSC input files.
* nroff: The ".psbb" request has been made a no-op since nroff cannot
  otherwise handle EPS documents anyway.
* [nt]roff: The "\(dq" character has been introduced as an alternate name
  for the ASCII double quote character.
* tbl: When ending macros in generated code, ".00" is now used instead
  of "..". This allows the use of ".ig" and similar requests within "T{"
  etc. without interference.
* pic: Accept "{lower|upper} {left|right} of" as aliases for ".nw", ".sw",
  ".ne", and ".se".
* pic: Continued newlines in expressions like "center \<newline>of" are
  now accepted.

Release 060716
* troff: The ".letadj" request has been added to enable dynamic letter
  spacing and letter reshaping when justifying lines.
* troff: Font and size attributes of space (and newline) characters in
  input are now honored for computing widths and kerning pairs. Previously,